--- a/src/main/resources/templates/list-animals.html
+++ b/src/main/resources/templates/list-animals.html
@@ -4,17 +4,18 @@
 >
 <head>
     <meta charset="UTF-8">
-    <title>СУЗ - Список задач</title>
+    <title>СРДП - Список задач</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
+    <link rel="icon" type="image/x-icon" href="/icons/icon-pets.ico">
 </head>
 
 <body style="background-color: #B6C9C6;">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/index}">Система управления задачами</a>
+        <a class="navbar-brand" th:href="@{/index}">Система регистрации домашних питомцев</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
